--- a/_posts/2018-06-11-js2ts-2.md
+++ b/_posts/2018-06-11-js2ts-2.md
@@ -1,6 +1,8 @@
 ---
 title: "React To Typescript Part 2: Converting React Components to TypeScript"
 permalink: '/converting-typescript-to-javascript-part-2'
+short: "This is the second in a series of blog post that will deal with converting an existing React codebase to Typescript. We’ll end end up with a completely typechecked codebase.
+        This time we’ll be looking adding type annotations to simple React components."
 ---
 
 *This is the second in a series of blog post that will deal with converting an existing React codebase, Flatris by [@Skidding](https://twitter.com/skidding) to Typescript. We’ll end end up with a completely typechecked codebase.
