--- a/_posts/2018-06-11-js2ts-2.md
+++ b/_posts/2018-06-11-js2ts-2.md
@@ -10,10 +10,7 @@ This time we’ll be looking adding type annotations to simple React components.
 
 ### [Where we left off last time](https://medium.com/@geewee/tinkerer-converting-a-react-codebase-to-typescript-part-1-getting-it-to-compile-e53567db25)
 
-We can now run Javascript and Typescript side by side. That means we can convert things gradually.
-Let’s start by converting the React Components first - they’re easy to convert, as they already have a type-system bolted on via PropTypes.
-As Flatris doesn’t have a test-suite we can’t automatically test our refactorings. However, it is only one screen, so manual testing is easy.
-What we’ll do is we’ll rewrite one component at a time, run the game to make sure everything works.
+We can now run Javascript and Typescript side by side. That means we can convert things gradually. Let’s start by converting the React Components first - they’re easy to convert, as they already have a type-system bolted on via PropTypes. As Flatris doesn’t have a test-suite we can’t automatically test our refactorings. However, it is only one screen, so manual testing is easy. What we’ll do is we’ll rewrite one component at a time, run the game to make sure everything works.
 
 I’ve previously written about where to start adding types to an [untyped codebase](https://medium.com/@geewee/tinkerer-in-what-order-should-i-start-adding-types-f1c3fdd6d0f4),
 but the tl;dr is: We should start with components that have as few untyped dependencies as possible. I call this bottom up.
@@ -55,8 +52,7 @@ export default styled.button`
 
 We’ll need the types for the library to make this work.
 
-Some libraries ship with typescript definitions, in which case we don’t need to do any additional work.
-Popular libraries that don’t ship with type definitions have them under the @types namespace on npm.
+Some libraries ship with typescript definitions, in which case we don’t need to do any additional work. Popular libraries that don’t ship with type definitions have them under the @types namespace on npm.
 
 As styled-components ships with its own typescript definitions, we don’t need to do anything extra - all we need to do is rename **button.jsx** to **button.tsx** and we’re good to go.
 
@@ -98,13 +94,11 @@ C:/…/flatris-ts/src/components/SquareBlock.tsx
 (15,13): Property 'propTypes' does not exist on type '({ color }: { color: any; }) => Element'.
 ```
 
-Typescript correctly infers the type of our function here, as as a function something that takes in a color object, and returns a JSX element.
-However, typescript isn’t crazy about randomly adding properties to functions. This means when we try to add the propTypes, typescript balks and tells us that this function doesn’t have a propType property - what’s up with that?
+Typescript correctly infers the type of our function here, as as a function something that takes in a color object, and returns a JSX element. However, typescript isn’t crazy about randomly adding properties to functions. This means when we try to add the propTypes, typescript balks and tells us that this function doesn’t have a propType property - what’s up with that?
 
 What we’ll want to do instead of simply defining the function as we did in regular Javascript above, is that we’ll want to add a type annotation to make sure Typescript considers it a proper React component - propTypes and all.
 
-In the React typings, a functional component is called React.SFC - where SFC is Stateless Functional Component.
-Let’s try to add this type annotation to the component:
+In the React typings, a functional component is called React.SFC - where SFC is Stateless Functional Component. Let’s try to add this type annotation to the component:
 
 ```ts
 {% raw %}
@@ -122,10 +116,7 @@ Here we get a new error:
 ```
 (11,36): Type '{ children?: ReactNode; }' has no property 'color' and no string index signature.’’
 ```
-Here TypeScript seems to be complaining about us passing in `color` in our component.
-Weird. Let’s try to take a look at the typings for the React.SFC to see what’s going on.
-While this isn’t the most complex example of a type definition (for complex cases, they can get *very* hairy)
-it’s still complex enough to worth taking a closer look.
+Here TypeScript seems to be complaining about us passing in `color` in our component. Weird. Let’s try to take a look at the typings for the React.SFC to see what’s going on. While this isn’t the most complex example of a type definition (for complex cases, they can get *very* hairy) it’s still complex enough to worth taking a closer look.
 
 We’ll look at the type annotations one at a time, and try to figure out what’s going on. This is going to be a bit of a deeper dive into some Typescript typings - hang on.
 
@@ -141,14 +132,11 @@ So e.g.
 type StringOrNumber = string | number
 ```
 
-Is a type alias for the union of string and number. It is exactly
-equivalent to substituting StringOrNumber with string | number every time you see it.
+Is a type alias for the union of string and number. It is exactly equivalent to substituting StringOrNumber with `string | number` every time you see it.
 
 Now, the next part of the type: The angle brackets. The part inside the angle brackets <> denote the generic type.
 
-The generic type here is called P  - for props I assume.
-This is the part where we tell Typescript what kind of props we're willing to accept.
-It says `<P = {}>` - that means; ‘if no type is supplied, default to the empty object `{}` - meaning no additional props’ 
+The generic type here is called P  - for props I assume. This is the part where we tell Typescript what kind of props we're willing to accept. It says `<P = {}>` - that means; ‘if no type is supplied, default to the empty object `{}` - meaning no additional props’ 
 
 So summing up, the entire line means:
 
@@ -176,8 +164,7 @@ So, the first part of the interface is the interesting part, let’s take a look
 (props: P & { children?: ReactNode }, context?: any): ReactElement<any> | null;
 ```
 
-What we have here is a callable signature - it means that anything conforming to this interface can be called with the following signature.
-Let's try to tear it a bit apart and see what it means
+What we have here is a callable signature - it means that anything conforming to this interface can be called with the following signature. Let's try to tear it a bit apart and see what it means
 
 The first part
 
@@ -185,10 +172,7 @@ The first part
 (props : P & (children?: ReactNode)
 ```
 
-is an intersection type, denoted by the `&`.
-The `&` means 'combine these two types'
-So this statements means:
-"Take in a props parameter, that is the combination of the generic parameter props, but can also have an extra prop called children."
+is an intersection type, denoted by the `&`. The `&` means 'combine these two types' So this statements means: "Take in a props parameter, that is the combination of the generic parameter props, but can also have an extra prop called children."
 
 The ? after children denote it is optional. This allows us to pass children when we want to, via JSX. E.g.
 ```html
@@ -233,8 +217,7 @@ const SquareBlock : React.SFC<any> = ({ color }) => (
 {% endraw %}
 ```
 
-This makes it compile without any problems - however TypeScript will now allow us to pass *any* props to SquareBlock.
-Now we don’t necessarily want that - the more we use the **any** type, the less value we get from Typescript.
+This makes it compile without any problems - however TypeScript will now allow us to pass *any* props to SquareBlock. Now we don’t necessarily want that - the more we use the **any** type, the less value we get from Typescript.
 
 We can tell from the PropTypes that the color object should be a string, so let’s capture that in a typescript interface.
 
@@ -486,16 +469,3 @@ export default Tetromino;
 Looks pretty much the same right? If you’re already specifying types via propTypes, you can often simply replace the propTypes with typescript interfaces. Often you won’t need to add any type annotations to the meat of your components at all - typescript can infer it for you.
 
 *In the next part, we’ll look at using simple run-time analysis to type components we can’t quite figure out how to type by simply looking at propTypes. We’ll also look at typing reducers and actions. If you have any comments or questions, reach out to me at [@GeeWengel](https://twitter.com/GeeWengel).*
-
-*If you just want to be notified when the next part is live - subscribe to my newsletter. I email very rarely, as I’m very lazy.*
-<div id="mc_embed_signup">
-<form action="https://gustavwengel.us17.list-manage.com/subscribe/post?u=4665de11d74ac82100225dbce&amp;id=6f7f0b424c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Suscribe to GeeWee's web development treats</label>
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_4665de11d74ac82100225dbce_6f7f0b424c" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
