--- a/_posts/2020-09-07-yagni-yet.md
+++ b/_posts/2020-09-07-yagni-yet.md
@@ -24,10 +24,10 @@ When deciding when to perform tasks, there's a few things we might want to take 
 
 - <strong>Can the task be delayed?</strong>
 If we have someone who needs this done in six months, and it'll take us six months to create, we obviously can't delay it.
-In our example, the documentation probably wouldn't take more than a few weeks at most - meaning that we could have delayed it until then.
+In our example, the documentation probably wouldn't take more than a few weeks at most - meaning that we could have delayed it until then.[^0]
 
 - <strong>Does completing the task create value right away, or only in the future?</strong>
-Some tasks, like tests, create value the minute they're created. Documentation for external consumers doesn't. It only creates value when the external users start using the API.
+Some tasks, like tests, create value the minute they're created. Documentation for external consumers doesn't.[^1] It only creates value when the external users start using the API.
 
 - <strong>What is the price to maintain the task, when requirements change?</strong>
 I like to call this the *upkeep*. Different tasks have different upkeeps.
@@ -60,8 +60,12 @@ It only creates value when we have to provision new environments, and as mention
 It was very high. Provisioning scripts are impossible to test, and can take quite a while to run. Using a few hours every time a service changed was not unusual.
 
 - <strong>How uncertain are the requirements?</strong>
-We made this decision in the start of the project, when we were very uncertain about the requirements and the cloud services we needed. If I'd been smarter, I would have realized that this meant I should have postponed this work.
+We made this decision in the start of the project, when we were very uncertain about the requirements and the cloud services we needed.[^2] If I'd been smarter, I would have realized that this meant I should have postponed this work.
 
 In this case, we should have realized that the value gain wasn't worth the cost. Particularly not when we were this early in the project. The right call would have been to build the scripts, when provisioning environments by hand happened so often, it became a major pain point. This might never have happened, and we never would have written the scripts. [We would have maximized the amount of work not done.](http://agilemanifesto.org/principles.html)
 
 So next time you're about to start a large task, ask yourself "Is this the right time to do this?" - just maybe it'll save you from doing it multiple times.
+
+[^0]: Unless you push everything to the end - in which case you're not very good at project management.
+[^1]: Value here, can also be that you learn something from it. So if you learn something about how the API should work, by writing the documentation, it might create value.
+[^2]: Even though we thought we were pretty sure, of course.
